--- a/BurstService.vbproj
+++ b/BurstService.vbproj
@@ -119,6 +119,7 @@
     <Compile Include="clsProcessHandler.vb">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="clsSettings.vb" />
     <Compile Include="main.vb">
       <SubType>Component</SubType>
     </Compile>
